fixed filter resources button spacing

--- a/src/styles/toolBox.css
+++ b/src/styles/toolBox.css
@@ -76,7 +76,7 @@
 
 /* TOOLBOX */
 .toolopen-icon-nav {
-  height: 100%;
+  height: 70px;
   right: 50%;
   left: 50%;
   min-width: 100px;
